--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^3.4.1",
     "d3-scale-chromatic": "^3.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "recharts": "^2.0.10",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1"
